--- a/QinYuan/app/src/main/res/values-rCN/strings.xml
+++ b/QinYuan/app/src/main/res/values-rCN/strings.xml
@@ -52,9 +52,9 @@
     <string name="info_phone2">座    机：</string>
     <string name="info_category">用户类型：</string>
     <string name="info_logout">登出</string>
-    <string name="type_manage_center">管理中心</string>
-    <string name="type_agent">代理店</string>
-    <string name="type_shop">网店</string>
+    <string name="type_1">管理中心</string>
+    <string name="type_2">代理店</string>
+    <string name="type_3">网店</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="phone1">手机：</string>
     <string name="phone2">座机：</string>
